--- a/be/index.html
+++ b/be/index.html
@@ -5,8 +5,8 @@
     window.loadStartTime = new Date()
     </script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>码心管理后台</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>管理后台</title>
   </head>
   <body>
     <div id="app"></div>
