--- a/be/index.html
+++ b/be/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="https://github.com/mvpzx">
     <meta name="description" content="个人博客：https://iamzx.cn。这里是个人博客后台管理系统。">
-    <title>管理后台 | CodingFun</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="http://p39p1kvxn.bkt.clouddn.com/elapse.ico">
+    <title>管理后台 | Mvpzx</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.iamzx.cn/elapse.ico">
   </head>
   <body>
     <div id="app"></div>
